<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/teal"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/inputNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/editText"
        android:textSize="21sp"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:padding="10dp"

        android:background="@color/white"
        android:ems="10"
        android:inputType="number"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="350sp"
        android:layout_height="70sp"
        android:background="@color/white">
        <TextView
            android:layout_width="175sp"
            android:layout_height="match_parent"
            android:text="@string/labelFrom"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@color/white"/>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="175sp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350sp"
        android:layout_height="70sp"
        android:background="@color/white">
        <TextView
            android:layout_width="175sp"
            android:layout_height="match_parent"
            android:text="@string/labelTo"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@color/white"/>
        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="176sp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/convertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonText"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/labelResult"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="20sp"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />
</LinearLayout>